src/test/ui/type-alias-impl-trait/incoherent-assoc-imp-trait.stderr
error[E0210]: type parameter `F` must be used as the type parameter for some local type (e.g., `MyStruct<F>`)
  --> $DIR/incoherent-assoc-imp-trait.rs:10:6
   |
LL | impl<F> FnOnce<()> for &F {
   |      ^ type parameter `F` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0210`.
